feat(security): implementar segurança enterprise-grade com rate limiting e sanitização
- Adicionar rate limiting global e por endpoint (login, create, delete, export)
- Implementar sanitização NoSQL com whitelist para emails, URLs, CPFs, datas ISO
- Configurar CORS dinâmico com validação de origem
- Instalar e configurar Helmet para headers de segurança HTTP
- Adicionar timeouts de 30s para requests/responses
- Criar sistema de logging estruturado com 6 níveis (info, warn, error, debug, security, success)
- Implementar validação obrigatória de MONGO_URI com process.exit
- Adicionar health check endpoint para monitoramento
- Configurar graceful shutdown para SIGTERM/SIGINT
- Ajustar rate limiters para ambiente de desenvolvimento (20 login/500 global)

BREAKING CHANGE: MongoDB URI agora é obrigatória - sistema não inicia sem MONGO_URI configurada

fixes: #security #nosql-injection #rate-limiting

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,11 +1,14 @@
-# Configuração do Banco de Dados MongoDB
-MONGODB_URI=mongodb://localhost:27017/agendamentos
-
-# Chave secreta para JWT (gere uma chave segura)
-JWT_SECRET=sua_chave_jwt_super_secreta_aqui
-
-# Porta do servidor backend
+# Configurações do Servidor
 PORT=5000
-
-# Ambiente de execução
 NODE_ENV=development
+
+# Banco de Dados MongoDB
+MONGO_URI=mongodb://localhost:27017/agendamentos
+
+# Autenticação JWT
+# IMPORTANTE: Use uma chave forte com no mínimo 32 caracteres aleatórios
+# Gere com: openssl rand -base64 32
+JWT_SECRET=sua_chave_jwt_super_secreta_aqui_minimo_32_caracteres
+
+# Frontend (para configuração de CORS)
+FRONTEND_URL=http://localhost:5173
