feat(segurança): implementar endurecimento de segurança abrangente
- feat(auth): implementar JWT com cookies httpOnly seguros
  - Adicionar JWT_SECRET e JWT_REFRESH_SECRET com chaves criptográficas de 128 caracteres
  - Configurar cookies com flags httpOnly, secure e sameSite
  - Implementar mecanismo de refresh token para gerenciamento de sessão

- feat(criptografia): implementar criptografia de dados AES-256-CBC
  - Criptografar dados sensíveis PII (CPF, nomes, telefones)
  - Adicionar ENCRYPTION_KEY às variáveis de ambiente
  - Criar utilitários de criptografia/descriptografia

- feat(segurança): adicionar headers de segurança Helmet.js
  - Configurar CSP, HSTS, X-Frame-Options
  - Adicionar rate limiting (20 req/15min)
  - Implementar CORS com whitelist

- feat(auth): separar credenciais MongoDB em variáveis env
  - Dividir MONGO_URI em componentes individuais (user, password, host, port)
  - Construir connection string programaticamente
  - Adicionar fallback para formato legado MONGO_URI

- feat(segurança): adicionar sistema de validação de secrets
  - Validar comprimento e força dos secrets JWT na inicialização
  - Prevenir start do servidor com credenciais fracas

- fix(dados): corrigir exibição de dados criptografados nas tabelas
  - Mudar de .lean() para .toJSON() para descriptografia correta
  - Corrigir appointmentController para descriptografar dados corretamente

- chore(segurança): atualizar .gitignore com proteções abrangentes
  - Ignorar todas as variações e backups de .env
  - Ignorar certificados SSL/TLS e chaves privadas
  - Ignorar arquivos de tokens, secrets e credenciais
  - Ignorar dumps e backups de banco de dados
  - Ignorar chaves SSH

- docs: adicionar documentação de segurança abrangente
  - Criar REQUIREMENTS.txt com lista completa de dependências
  - Criar SECURITY-CHECKLIST.txt com auditoria de segurança
  - Criar SECURITY-COOKIES.md com detalhes de implementação de cookies
  - Adicionar .env.example detalhado para frontend e backend


--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,14 +1,150 @@
-# Configurações do Servidor
+# =============================================================================
+# SISTEMA DE AGENDAMENTOS CRAS - Backend Environment Variables
+# =============================================================================
+# ⚠️ IMPORTANTE: Este é um arquivo de EXEMPLO. NÃO coloque valores reais aqui!
+# 
+# 1. Copie este arquivo: cp .env.example .env
+# 2. Edite o arquivo .env com seus valores reais
+# 3. NUNCA commite o arquivo .env no Git
+# =============================================================================
+
+# -----------------------------------------------------------------------------
+# 🗄️ MONGODB CONFIGURATION
+# -----------------------------------------------------------------------------
+# Opção 1: URI completa (formato padrão)
+MONGO_URI=mongodb://[username]:[password]@[host]:[port]/[database]?authSource=[authSource]
+# Exemplo: mongodb://cras_admin:SuaSenhaSegura123@localhost:27017/agendamentos?authSource=admin
+
+# Opção 2: Componentes separados (mais seguro - use esta opção!)
+MONGO_USER=cras_admin
+MONGO_PASSWORD=SuaSenhaSegura123
+MONGO_HOST=localhost
+MONGO_PORT=27017
+MONGO_DB=agendamentos
+MONGO_AUTH_SOURCE=admin
+
+# ⚠️ SEGURANÇA:
+# - NUNCA use MongoDB sem autenticação em produção!
+# - Senha deve ter no mínimo 20 caracteres (letras, números, símbolos)
+# - Use usuário específico com permissões limitadas (readWrite + dbAdmin)
+# - Em produção, configure TLS/SSL: ?tls=true&tlsCAFile=/path/to/ca.pem
+
+# -----------------------------------------------------------------------------
+# 🔐 JWT (JSON Web Tokens) CONFIGURATION
+# -----------------------------------------------------------------------------
+# Secret para tokens de acesso (Access Tokens)
+JWT_SECRET=GERAR_COM_COMANDO_ABAIXO_128_CARACTERES_HEXADECIMAIS
+# Gerar: node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
+
+# Secret para tokens de atualização (Refresh Tokens)
+JWT_REFRESH_SECRET=GERAR_COM_COMANDO_ABAIXO_128_CARACTERES_DIFERENTES
+# Gerar: node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
+
+# ⚠️ SEGURANÇA:
+# - Cada secret DEVE ter no mínimo 64 caracteres (recomendado: 128)
+# - JWT_SECRET e JWT_REFRESH_SECRET DEVEM ser DIFERENTES
+# - NUNCA reutilize secrets entre ambientes (dev, staging, prod)
+# - Rotacione secrets a cada 3-6 meses em produção
+# - Guarde backup dos secrets em vault/cofre seguro
+
+# -----------------------------------------------------------------------------
+# 🔒 DATA ENCRYPTION CONFIGURATION
+# -----------------------------------------------------------------------------
+# Chave de criptografia para dados sensíveis (CPF, nomes, telefones)
+ENCRYPTION_KEY=sua_chave_de_criptografia_forte_aqui_minimo_32_caracteres
+
+# ⚠️ CRÍTICO - LEIA COM ATENÇÃO:
+# - Esta chave é usada para criptografar dados PERMANENTEMENTE no banco de dados
+# - Se ALTERAR esta chave, TODOS os dados criptografados ficarão ILEGÍVEIS para sempre!
+# - Use uma string aleatória forte (mínimo 32 caracteres)
+# - Algoritmo usado: AES-256-CBC
+# - NUNCA altere após o primeiro registro no banco!
+# - Faça backup seguro desta chave ANTES de qualquer migração!
+# 
+# Gerar chave forte:
+# node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+#
+# Dados que serão criptografados:
+# ✅ CPF dos usuários
+# ✅ Nomes completos
+# ✅ Números de telefone
+# ✅ CPF dos agendamentos
+
+# -----------------------------------------------------------------------------
+# 🌐 SERVER CONFIGURATION
+# -----------------------------------------------------------------------------
+# Porta onde o servidor Express irá rodar
 PORT=5000
+
+# Ambiente de execução (development, production, test)
 NODE_ENV=development
 
-# Banco de Dados MongoDB
-MONGO_URI=mongodb://localhost:27017/agendamentos
-
-# Autenticação JWT
-# IMPORTANTE: Use uma chave forte com no mínimo 32 caracteres aleatórios
-# Gere com: openssl rand -base64 32
-JWT_SECRET=sua_chave_jwt_super_secreta_aqui_minimo_32_caracteres
-
-# Frontend (para configuração de CORS)
+# URL do frontend (para configuração CORS)
 FRONTEND_URL=http://localhost:5173
+# Em produção: FRONTEND_URL=https://seudominio.com.br
+
+# ⚠️ IMPORTANTE:
+# - Em produção, NODE_ENV DEVE ser "production"
+# - FRONTEND_URL em produção DEVE ser HTTPS
+# - Nunca use http:// em produção (apenas https://)
+
+# -----------------------------------------------------------------------------
+# 📝 LOGGING CONFIGURATION (opcional)
+# -----------------------------------------------------------------------------
+# Nível de log: error, warn, info, http, verbose, debug, silly
+LOG_LEVEL=info
+
+# Diretório para salvar logs
+LOG_DIR=logs
+
+# Dias para manter logs antigos
+LOG_RETENTION_DAYS=30
+
+# -----------------------------------------------------------------------------
+# 🚦 RATE LIMITING (opcional - valores padrão já configurados)
+# -----------------------------------------------------------------------------
+# Máximo de requisições por janela de tempo
+RATE_LIMIT_MAX=20
+
+# Janela de tempo em minutos
+RATE_LIMIT_WINDOW=15
+
+# -----------------------------------------------------------------------------
+# 🔐 SESSION CONFIGURATION (opcional)
+# -----------------------------------------------------------------------------
+# Tempo de expiração do Access Token (em segundos)
+JWT_EXPIRES_IN=28800  # 8 horas
+
+# Tempo de expiração do Refresh Token (em segundos)
+JWT_REFRESH_EXPIRES_IN=604800  # 7 dias
+
+# -----------------------------------------------------------------------------
+# 📧 EMAIL CONFIGURATION (futuro - não implementado ainda)
+# -----------------------------------------------------------------------------
+# SMTP_HOST=smtp.gmail.com
+# SMTP_PORT=587
+# SMTP_USER=seu-email@gmail.com
+# SMTP_PASSWORD=sua-senha-de-app
+# SMTP_FROM=noreply@seudominio.com.br
+
+# -----------------------------------------------------------------------------
+# CHECKLIST ANTES DE RODAR EM PRODUÇÃO
+# -----------------------------------------------------------------------------
+# 
+# ✅ Todas as variáveis preenchidas com valores reais
+# ✅ JWT_SECRET gerado com 128 caracteres (crypto.randomBytes(64))
+# ✅ JWT_REFRESH_SECRET gerado e DIFERENTE do JWT_SECRET
+# ✅ ENCRYPTION_KEY gerada e BACKUP feito em local seguro
+# ✅ MongoDB com autenticação habilitada
+# ✅ MONGO_PASSWORD com no mínimo 20 caracteres fortes
+# ✅ NODE_ENV=production
+# ✅ FRONTEND_URL com HTTPS e domínio real
+# ✅ Arquivo .env NÃO está no Git (.gitignore configurado)
+# ✅ Permissões do arquivo .env: chmod 600 .env
+# ✅ Firewall configurado (apenas portas necessárias abertas)
+# ✅ SSL/TLS configurado (Let's Encrypt)
+# ✅ Backup da ENCRYPTION_KEY em vault/cofre
+# ✅ Processo de rotação de secrets documentado
+# 
+# =============================================================================
+
