--- a/.gitignore
+++ b/.gitignore
@@ -19,12 +19,44 @@ backend/dist
 
 # Environment variables
 .env
+.env.*
+!.env.example
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 backend/.env
+backend/.env.*
+!backend/.env.example
 backend/.env.local
+
+# Backup files with sensitive data
+*.backup
+*.backup.*
+.env.backup*
+backend/.env.backup*
+
+# Files with tokens/secrets
+headers.txt
+tokens.txt
+secrets.txt
+*.token
+*.secret
+
+# SSL/TLS certificates and keys
+*.pem
+*.key
+*.crt
+*.csr
+*.p12
+*.pfx
+
+# SSH keys
+id_rsa
+id_rsa.pub
+id_ed25519
+id_ed25519.pub
+*.ppk
 
 # Scripts de desenvolvimento/teste (backend)
 backend/scripts/createTestUsers.js
