--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mui/x-date-pickers": "^8.5.1",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
+    "joi": "^18.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^6.30.1"
