--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^6.30.1",
+    "recharts": "^3.5.1",
     "winston": "^3.18.3"
   },
   "devDependencies": {
