fix(deploy): corrigir configuração do Render para executar backend corretamente
- Adicionar rootDir: backend para definir diretório raiz
- Simplificar buildCommand e startCommand
- Resolver erro 404 nas rotas /api/stats/dashboard

--- a/render.yaml
+++ b/render.yaml
@@ -7,8 +7,9 @@ services:
     runtime: node
     region: oregon  # Mais próximo do MongoDB Atlas gratuito
     plan: free
-    buildCommand: cd backend && npm install
-    startCommand: cd backend && npm start
+    rootDir: backend
+    buildCommand: npm install
+    startCommand: npm start
     envVars:
       - key: NODE_ENV
         value: production
