fix(config): adicionar proxy de API no Vercel para Render
- Configurar rewrite /api/* para https://cras-agendamentos.onrender.com/api/*
- Resolver erro 404 nas requisições de API em produção
- Frontend agora consegue se comunicar com backend no Render

--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,10 @@
   "framework": "vite",
   "rewrites": [
     {
+      "source": "/api/:path*",
+      "destination": "https://cras-agendamentos.onrender.com/api/:path*"
+    },
+    {
       "source": "/((?!api).*)",
       "destination": "/index.html"
     }
