fix(security): usar variável de ambiente para URL da API
- Remover URL hardcoded do vercel.json por segurança
- Configurar VITE_API_BASE_URL via variável de ambiente
- Atualizar documentação com instruções para Vercel
- URL da API agora é configurada no dashboard do Vercel

--- a/REQUIREMENTS.txt
+++ b/REQUIREMENTS.txt
@@ -181,7 +181,11 @@ FRONTEND_URL=http://localhost:5173
 
 Frontend (.env.local opcional):
 -------------------------------
-VITE_API_URL=http://localhost:5000
+VITE_API_BASE_URL=http://localhost:5000/api
+
+Produção (Vercel - configurar no dashboard):
+-------------------------------
+VITE_API_BASE_URL=https://cras-agendamentos.onrender.com/api
 
 
 =============================================================================
